Updates from Overleaf

--- a/bibFile.bib
+++ b/bibFile.bib
@@ -15,6 +15,16 @@
   year={2020}
 }
 
+@inproceedings{trng-harvest,
+  title={FPGA vendor agnostic true random number generator},
+  author={Schellekens, Dries and Preneel, Bart and Verbauwhede, Ingrid},
+  booktitle={2006 International conference on field programmable logic and applications},
+  pages={1--6},
+  year={2006},
+  organization={IEEE}
+}
+
+
 @incollection{ANN-Paper,
   title={Artificial neural network},
   author={Wang, Sun-Chong},
@@ -46,7 +56,66 @@
   publisher={IEEE}
   }
   
+  @article{reservoir-computing,
+  title={Reservoir computing trends},
+  author={Luko{\v{s}}evi{\v{c}}ius, Mantas and Jaeger, Herbert and Schrauwen, Benjamin},
+  journal={KI-K{\"u}nstliche Intelligenz},
+  volume={26},
+  number={4},
+  pages={365--371},
+  year={2012},
+  publisher={Springer}
+}
+
+@article{esn,
+  title={Support vector echo-state machine for chaotic time-series prediction},
+  author={Shi, Zhiwei and Han, Min},
+  journal={IEEE transactions on neural networks},
+  volume={18},
+  number={2},
+  pages={359--372},
+  year={2007},
+  publisher={IEEE}
+}
+
+
+@article{homeomorphic,
+  title={A complete elementary proof that Hilbert space is homeomorphic to the countable infinite product of lines},
+  author={Anderson, RD and Bing, RH},
+  journal={Bulletin of the American Mathematical Society},
+  volume={74},
+  number={5},
+  pages={771--792},
+  year={1968},
+  publisher={American Mathematical Society}
+}
   
+@book{basic-real-analysis,
+  title={Basic real analysis},
+  author={Sohrab, Houshang H},
+  volume={231},
+  year={2003},
+  publisher={Springer}
+}
+  
+  
+  @incollection{st-th,
+  title={The stone-weierstrass theorem},
+  author={Young, Matt},
+  booktitle={MATH 328 Notes},
+  year={2006},
+  publisher={Queen's University at Kingston}
+}
+
+@incollection{bernstien-interpolation,
+  title={Bernstein Polynomials},
+  author={Phillips, George M},
+  booktitle={Interpolation and Approximation by Polynomials},
+  pages={247--290},
+  year={2003},
+  publisher={Springer}
+}
+
  @inproceedings{FPGA-power,
   title={Challenges in Energy-Efficient Deep Neural Network Training with FPGA},
   author={Tao, Yudong and Ma, Rui and Shyu, Mei-Ling and Chen, Shu-Ching},
@@ -187,6 +256,13 @@
   publisher={MIT Press}
 }
 
+@article{understanding-meta,
+  title={Understanding metastability in FPGAs},
+  author={Stephenson, Jennifer and Chen, Doris and Fung, Ryan and Chromczak, Jeffrey},
+  journal={Altera Corporation white paper},
+  year={2009}
+}
+
 @article{nn-uvfa,
   title={Beyond feedforward models trained by backpropagation: A practical training tool for a more efficient universal approximator},
   author={Ilin, Roman and Kozma, Robert and Werbos, Paul J},
@@ -196,4 +272,22 @@
   pages={929--937},
   year={2008},
   publisher={IEEE}
+}
+
+@inproceedings{puf-saqib,
+  title={PUF-based authentication},
+  author={Che, Wenjie and Saqib, Fareena and Plusquellic, Jim},
+  booktitle={2015 IEEE/ACM International Conference on Computer-Aided Design (ICCAD)},
+  pages={337--344},
+  year={2015},
+  organization={IEEE}
+}
+
+@inproceedings{meta-latch-puf,
+  title={Efficient sr-latch PUF},
+  author={Habib, Bilal and Kaps, Jens-Peter and Gaj, Kris},
+  booktitle={International symposium on applied reconfigurable computing},
+  pages={205--216},
+  year={2015},
+  organization={Springer}
 }
